--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,9 @@ jobs:
 
       # Run the scraper script
       - name: Run scraper
-        run: node scraper.js
+        run: node scraper_ft.js
+        run: node scraper_nikkei.js
+        run: node scraper_hn.js
 
       # Commit and push the updated rss.xml file
       - name: Commit and push changes
