update .DS_Store, main.yml, scraper_hn.js and src/index.html

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,9 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add rss.xml
+          git add rss_ft.xml
+          git add rss_lobsters.xml
+          git add rss_nikkei.xml
+          git add rss_hn.xml
           git commit -m "Update rss.xml"
           git push
